@@ -90,6 +90,9 @@ public:
     bool setSocketDescriptor(qintptr socketDescriptor, SocketState state = ConnectedState,
                              OpenMode openMode = ReadWrite);
 
+    void connectToHost(const QString &hostName, quint16 port, OpenMode openMode = ReadWrite, NetworkLayerProtocol protocol = AnyIPProtocol);
+    void disconnectFromHost();
+
     // ### Qt 5: Make virtual
     void setSocketOption(QAbstractSocket::SocketOption option, const QVariant &value);
     QVariant socketOption(QAbstractSocket::SocketOption option);
@@ -192,11 +195,6 @@ Q_SIGNALS:
     void sslErrors(const QList<QSslError> &errors);
     void modeChanged(QSslSocket::SslMode newMode);
     void encryptedBytesWritten(qint64 totalBytes);
-
-protected Q_SLOTS:
-    void connectToHostImplementation(const QString &hostName, quint16 port,
-                                     OpenMode openMode);
-    void disconnectFromHostImplementation();
 
 protected:
     qint64 readData(char *data, qint64 maxlen);
